@@ -38,109 +38,80 @@
   </scm>
 
   <modules>
-    <module>yang-schema-provider</module>
+    <module>yang-schema</module>
   </modules>
 
   <properties>
-    <io.confluent.schema-registry.version>${confluent.version.range}</io.confluent.schema-registry.version>
-    <kafka.connect.maven.plugin.version>0.11.1</kafka.connect.maven.plugin.version>
     <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
     <checkstyle.suppressions.location>checkstyle/suppressions.xml</checkstyle.suppressions.location>
   </properties>
 
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>io.confluent</groupId>
-          <artifactId>kafka-connect-maven-plugin</artifactId>
-          <version>${kafka.connect.maven.plugin.version}</version>
-          <configuration>
-            <documentationUrl>https://docs.confluent.io/${io.confluent.schema-registry.version}/schema-registry/docs/connect.html</documentationUrl>
-            <sourceUrl>https://github.com/confluentinc/schema-registry</sourceUrl>
-            <supportProviderName>${project.organization.name}</supportProviderName>
-            <supportSummary>Confluent supports the Avro Converter alongside community members as part of its Confluent Platform offering.</supportSummary>
-            <supportUrl>https://docs.confluent.io/current/</supportUrl>
-            <supportLogo>logos/confluent.png</supportLogo>
-            <ownerUsername>confluentinc</ownerUsername>
-            <ownerType>organization</ownerType>
-            <ownerName>${project.organization.name}</ownerName>
-            <ownerUrl>https://confluent.io/</ownerUrl>
-            <ownerLogo>logos/confluent.png</ownerLogo>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>exec-maven-plugin</artifactId>
-          <version>${exec-maven-plugin.version}</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>java</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <descriptors>
-            <descriptor>src/assembly/package.xml</descriptor>
-          </descriptors>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>validate</id>
-            <phase>validate</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
+<!--  <build>-->
+<!--    <plugins>-->
+<!--      <plugin>-->
+<!--        <groupId>org.codehaus.mojo</groupId>-->
+<!--        <artifactId>exec-maven-plugin</artifactId>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <goals>-->
+<!--              <goal>java</goal>-->
+<!--            </goals>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
+<!--      <plugin>-->
+<!--        <artifactId>maven-assembly-plugin</artifactId>-->
+<!--        <configuration>-->
+<!--          <descriptors>-->
+<!--            <descriptor>src/assembly/package.xml</descriptor>-->
+<!--          </descriptors>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
+<!--      <plugin>-->
+<!--        <groupId>org.apache.maven.plugins</groupId>-->
+<!--        <artifactId>maven-checkstyle-plugin</artifactId>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <id>validate</id>-->
+<!--            <phase>validate</phase>-->
+<!--            <goals>-->
+<!--              <goal>check</goal>-->
+<!--            </goals>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
+<!--    </plugins>-->
 
-  </build>
+<!--  </build>-->
 
-  <profiles>
-    <profile>
-      <id>surefire-failsafe</id>
-      <activation>
-        <jdk>(1.8,)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>
-                --add-opens java.base/java.lang=ALL-UNNAMED
-              </argLine>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <configuration>
-              <argLine>
-                --add-opens java.security.jgss/sun.security.krb5=ALL-UNNAMED
-              </argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
+<!--  <profiles>-->
+<!--    <profile>-->
+<!--      <id>surefire-failsafe</id>-->
+<!--      <activation>-->
+<!--        <jdk>(1.8,)</jdk>-->
+<!--      </activation>-->
+<!--      <build>-->
+<!--        <plugins>-->
+<!--          <plugin>-->
+<!--            <groupId>org.apache.maven.plugins</groupId>-->
+<!--            <artifactId>maven-surefire-plugin</artifactId>-->
+<!--            <configuration>-->
+<!--              <argLine>-->
+<!--                &#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED-->
+<!--              </argLine>-->
+<!--            </configuration>-->
+<!--          </plugin>-->
+<!--          <plugin>-->
+<!--            <groupId>org.apache.maven.plugins</groupId>-->
+<!--            <artifactId>maven-failsafe-plugin</artifactId>-->
+<!--            <configuration>-->
+<!--              <argLine>-->
+<!--                &#45;&#45;add-opens java.security.jgss/sun.security.krb5=ALL-UNNAMED-->
+<!--              </argLine>-->
+<!--            </configuration>-->
+<!--          </plugin>-->
+<!--        </plugins>-->
+<!--      </build>-->
+<!--    </profile>-->
+<!--  </profiles>-->
 </project>
